<resources>
    <string name="app_name">Tarefas</string>
    <string name="tarefa">Tarefa</string>
    <string name="respons_vel">Responsável</string>
    <string name="nova_tarefa">Nova Tarefa</string>
    <string name="detalhe_tarefa">Detalhe Tarefa</string>
    <string name="data">Data</string>
    <string name="salvar">Salvar</string>
    <string name="adicionar">Adicionar</string>

    <string-array name="item">
        <item>Cotidiano</item>
        <item>Lazer</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>